tests/snapshots/examples_fixtures/type_system__failing__37_pure_context_unannotated_infers_io_then_rejects_time_caller.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/37_pure_context_unannotated_infers_io_then_rejects_time_caller.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `sink` requires effect `Console` in this function signature.

  examples/type_system/failing/37_pure_context_unannotated_infers_io_then_rejects_time_caller.flx:8:5
  |
8 |     sink("hello")
  |     ^^^^
  |     ---- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.
== stdout ==
<not executed>
